@@ -135,9 +135,6 @@ def CachePushFunc(target, source, env):
 
 CachePush = SCons.Action.Action(CachePushFunc, None)
 
-# Nasty hack to cut down to one warning for each cachedir path that needs
-# upgrading.
-warned = dict()
 
 class CacheDir(object):
 
@@ -159,12 +156,12 @@ class CacheDir(object):
         if path is None:
             return
 
-        self._readconfig3(path)
+        self._readconfig(path)
 
 
-    def _readconfig3(self, path):
+    def _readconfig(self, path):
         """
-        Python3 version of reading the cache config.
+        Read the cache config.
 
         If directory or config file do not exist, create.  Take advantage
         of Py3 capability in os.makedirs() and in file open(): just try
@@ -193,64 +190,6 @@ class CacheDir(object):
                     msg = "Failed to write cache configuration for " + path
                     raise SCons.Errors.SConsEnvironmentError(msg)
         except FileExistsError:
-            try:
-                with open(config_file) as config:
-                    self.config = json.load(config)
-            except ValueError:
-                msg = "Failed to read cache configuration for " + path
-                raise SCons.Errors.SConsEnvironmentError(msg)
-
-
-    def _readconfig2(self, path):
-        """
-        Python2 version of reading cache config.
-
-        See if there is a config file in the cache directory. If there is,
-        use it. If there isn't, and the directory exists and isn't empty,
-        produce a warning. If the directory does not exist or is empty,
-        write a config file.
-
-        :param path: path to the cache directory
-        """
-        config_file = os.path.join(path, 'config')
-        if not os.path.exists(config_file):
-            # A note: There is a race hazard here if two processes start and
-            # attempt to create the cache directory at the same time. However,
-            # Python 2.x does not give you the option to do exclusive file
-            # creation (not even the option to error on opening an existing
-            # file for writing...). The ordering of events here is an attempt
-            # to alleviate this, on the basis that it's a pretty unlikely
-            # occurrence (would require two builds with a brand new cache
-            # directory)
-            if os.path.isdir(path) and any(f != "config" for f in os.listdir(path)):
-                self.config['prefix_len'] = 1
-                # When building the project I was testing this on, the warning
-                # was output over 20 times. That seems excessive
-                global warned
-                if self.path not in warned:
-                    msg = "Please upgrade your cache by running " +\
-                          "scons-configure-cache.py " +  self.path
-                    SCons.Warnings.warn(SCons.Warnings.CacheVersionWarning, msg)
-                    warned[self.path] = True
-            else:
-                if not os.path.isdir(path):
-                    try:
-                        os.makedirs(path)
-                    except OSError:
-                        # If someone else is trying to create the directory at
-                        # the same time as me, bad things will happen
-                        msg = "Failed to create cache directory " + path
-                        raise SCons.Errors.SConsEnvironmentError(msg)
-
-                self.config['prefix_len'] = 2
-                if not os.path.exists(config_file):
-                    try:
-                        with open(config_file, 'w') as config:
-                            json.dump(self.config, config)
-                    except Exception:
-                        msg = "Failed to write cache configuration for " + path
-                        raise SCons.Errors.SConsEnvironmentError(msg)
-        else:
             try:
                 with open(config_file) as config:
                     self.config = json.load(config)
