@@ -76,11 +76,12 @@ From Rob Boehne
     - Accommodate VS 2017 Express - it's got a more liberal license then VS
       Community, so some people prefer it (from 2019, no more Express)
     - vswhere call should also now work even if programs aren't on the C: drive.
-    - Add an alternate warning message cl.exe is not found and msvc config
+    - Add an alternate warning message if cl.exe is not found and msvc config
       cache is in use (SCONS_CACHE_MSVC_CONFIG was given) - config cache
       may be out of date.
     - Fixed bug where changing TEXTFILESUFFIX would cause Substfile() to rebuild. (Github Issue #3540)
     - Script/Main.py now uses importlib instead of imp module.
+    - Drop some Python 2-isms.
 
 
 RELEASE 3.1.2 - Mon, 17 Dec 2019 02:06:27 +0000
